@@ -926,6 +926,7 @@ MainWindow::~MainWindow()
     streamsPage->save();
     positionSlider->saveConfig();
     StreamsModel::self()->save();
+    OnlineServicesModel::self()->save();
     Settings::self()->saveForceSingleClick(TreeView::getForceSingleClick());
     Settings::self()->saveStartHidden(trayItem->isActive() && isHidden() && Settings::self()->minimiseOnClose());
     Settings::self()->save(true);
